# KoalaEms

./: .gitconfig  .gitignore  build.sh  build_tclclient.sh  mache  thisems.sh
client/: Makefile.in  atraphist.cc  bong.cc  bong.hxx  caplist.cc  client_defaults.hxx  clientinfo.cc  compat.h  configure  configure.in  dataoutstatus  datarate.cc  decode_scaler.cc  dtmc.cc  dump_scaler.cc  dump_ved.cc  dump_ved1.cc  ems_message.cc  ems_message.hxx  ems_perfd.cc  ems_unsol_message.cc  ems_unsol_message.hxx  emsc_message.cc.m4  emsc_message.hxx.m4  emsr_message.cc.m4  emsr_message.hxx.m4  emswatch.cc  eventrate.cc  file_empfaenger.cc  hist2hbook.cc  hlralloadtest.cc  hlraltest.cc  illumination.cc  intc_message.cc.m4  intc_message.hxx.m4  intr_message.cc.m4  intr_message.hxx.m4  iseg_crate.cc  iseg_demo.cc  iseg_ems.cc  (+31 more)
client/CVS/: Entries  Repository
clientlib/: Makefile.in  acconfig.h  ccommcallback.h  clientcomm.c  clientcomm.h  clientcommlib.c  clientcommlib.h  compat.h  config.h  config.h.in  configure  configure.in  patchlevel
clientlib/CVS/: Entries  Repository
common/: .#modultypes.inc.2.43  .#modultypes.inc.2.48  .#rcs_ids.c.2.2  GNUmakefile.osk  Makefile.in  actiontypes.h  cdefs.h  clusterformat.h  config.h.in  configure  configure.in  conststrings.c  conststrings.h  debug.h  ems_err.f.m4  ems_err.h.m4  ems_err.inc  ems_errstr.c.m4  emsctypes.h.in  emssocktypes.h.in  errorarrs.tcl.m4  errorcodes.d.m4  errorcodes.f.m4  errorcodes.h.m4  errorcodes.inc  errorcodes.inc.de  errorcodes.num  errorcodes.tex.m4  errormessages.txt  errorstring.c.m4  eventformat.h  get_mount_dev.c  get_mount_dev.h  getcap.c  getcap.h  human_size.c  human_size.h  intmsgtypes.h.m4  intmsgtypes.inc  modulnames.c  (+37 more)
common/CVS/: Entries  Repository
commu/: Makefile.in  commu.cc  commu_anno.cc  commu_anno.hxx  commu_cdb.cc  commu_cdb.hxx  commu_client.cc  commu_client.hxx  commu_cosy_logg.cc  commu_db.cc  commu_db.hxx  commu_def.hxx  commu_file_logg.cc  commu_io.cc  commu_io.hxx  commu_io_client.cc  commu_io_client.hxx  commu_io_server.cc  commu_io_server.hxx  commu_list.cc  commu_list_t.cc  commu_list_t.hxx  commu_local_server.cc  commu_local_server.hxx.m4  commu_local_server_a.cc  commu_local_server_a.hxx.m4  commu_local_server_i.cc  commu_local_server_i.hxx.m4  commu_local_server_l.cc  commu_local_server_l.hxx.m4  commu_log.cc  commu_log.hxx  commu_logg.cc  commu_logg.hxx  commu_ls_req.cc.m4  commu_message.cc  commu_message.hxx  commu_nonedb.cc  commu_nonedb.hxx  commu_odb.cc  (+37 more)
commu/CVS/: Entries  Repository
commu/autom4te.cache/: output.0  requests  traces.0
events/: Makefile.in  async2shm.c  async_collector.c  async_receive.c  async_save.c  async_send.c  async_send_rand.c  canonic_path.c  canonic_path.h  cl2perfspect.c  cl2tape.c  cluster2trighist.c  clustercheck.c  clusterdecoder.c  clusterdump.c  clustersplitter.c  clustertime.c  config.h.in  configure  configure.in  day1dump.c  decode_1881.c  decode_f1_raw.c  decode_f1_raw1.c  decode_f1_rss.c  decode_f1_rss1.c  decode_f1_rss2.c  decode_vacuum.c  decoderconf.c11.apr-2005  dtmist.c  dtreject.c  dump_events.c  dump_evfile.c  dump_evtape.c  edm_decoder.c  ems_metafiles.c  emsdecoder.c  emsdecoder.conf  ev2ev.c  ev2ev.h  (+61 more)
events++/: KoaAnalyzer.cc  KoaAnalyzer.hxx  KoaAssembler.cc  KoaAssembler.hxx  KoaDecoder.cc  KoaDecoder.hxx  KoaEmsEvent.cc  KoaEmsEvent.hxx  KoaLoguru.cc  KoaLoguru.hxx  KoaOnlineAnalyzer.cc  KoaOnlineAnalyzer.hxx  KoaOnlineAssembler.cc  KoaOnlineAssembler.hxx  KoaParsers.cc  KoaParsers.hxx  KoaRaw.cc  KoaRaw.hxx  KoaRawData.cc  KoaRawData.hxx  KoaRawEvent.cc  KoaRawEvent.hxx  KoaRawSimple.cc  KoaRawSimple.hxx  KoaRawSophisticated.cc  KoaRawSophisticated.hxx  KoaSimpleAnalyzer.cc  KoaSimpleAnalyzer.hxx  KoaTimestampAssembler.cc  KoaTimestampAssembler.hxx  LinkDef.h  Makefile.in  Makefile.standalone  Readme.hbook  WASA-totzeiten  alloctest.cc  anketest.cc  atrappe.cc  cl2ev.cc  cl2ev.hxx  (+173 more)
events++/CVS/: Entries  Repository
events++/scripts/: defines_393.ems  defines_as6.ems  init.ems  init_393  init_as6  init_ns.ems  reset.ems  reset_ns.ems  start.ems  start_ns.ems
events/CVS/: Entries  (+1 more)
proclib/: Makefile.in  caplib.cc  caplib.hxx  compat.h  config.h.in  configure  configure.in  patchlevel  proc_addrtrans.cc  proc_addrtrans.hxx  proc_communicator.cc  proc_communicator.hxx  proc_conf.cc  proc_conf.hxx  proc_dataio.cc  proc_dataio.hxx  proc_dataoutstatus.cc  proc_dataoutstatus.hxx  proc_defs.hxx  proc_ioaddr.cc  proc_ioaddr.hxx  proc_iotype.cc  proc_iotype.hxx  proc_is.cc  proc_is.hxx  proc_isstatus.cc  proc_isstatus.hxx  proc_memberlist.cc  proc_memberlist.hxx  proc_modes.hxx  proc_modes_hxx  proc_modullist.cc  proc_modullist.hxx  proc_namelist.cc  proc_namelist.hxx  proc_plist.cc  proc_plist.hxx  proc_readoutstatus.cc  proc_readoutstatus.hxx  proc_ved.cc  (+9 more)
server/: .directory  DEVICES  Makefile  Makefile.in  acconfig.h  build.sh  config.cache  config.status  configure  configure.in  ems_server.sh  mache  patfile
support/: Makefile.in  anylist.cc  anylist.hxx  argtest.cc  buf.cc  buf.hxx  compat.h  compressed_io.cc  compressed_io.hxx  config.h.in  config_types.h.in  configure  configure.in  cxxcompat.hxx  debuglevel.cc  debuglevel.hxx  ems_errors.cc  ems_errors.hxx  errors.cc  errors.hxx  fifo.cc  fifo.hxx  hist_t.hxx  histogram.cc  histogram_t.cc  histogram_t.hxx  hitest.cc  inbuf.cc  inbuf.hxx  iopathes.cc  iopathes.hxx  membug.cxx  membug.hxx  mkpath.cc  mkpath.hxx  nocopy.hxx  outbuf.cc  outbuf.hxx  patchlevel  readargs.cc  (+16 more)
tcl_clientlib/: Makefile.in  compat.h  config.h.in  configure  configure.in  emsAppInit.cc  ems_xdr.cc  ems_xdr.hxx  emstcl.cc  emstcl.cc.alt  emstcl.hxx  emstcl_confir.cc  emstcl_formatter.cc  emstcl_int.cc  emstcl_is.cc  emstcl_is.hxx  emstcl_iscomm.cc  emstcl_ved.cc  emstcl_ved.hxx  emstcl_vedcomm.cc  findstring.cc  findstring.hxx  histoAppInit.cc  histoarr.cc  histoarr.hxx  histomaparr.cc  histotcl.cc  histotcl.hxx  histowin.cc  histowin.hxx  histscan.cc  newhistoarr.cc  newhistoarr.hxx  pairarr.cc  pairarr.hxx  pairarr_file.cc  pairarr_file.hxx  pairarr_map.cc  pairarr_map.hxx  pairarr_mem.cc  (+6 more)
(+3208 files in other folders)
